# proxmox-san-fenced

./: .gitignore  AGENTS.md  BUGS.md  Cargo.toml  Dockerfile  LICENSE  MONITORING.md  PLAN.md  README.md  build-package.sh  collect-sysfs-mock.sh  docker-entrypoint.sh
.github/workflows/: build-debian-package.yml
debian/: .gitlab-ci.yml  changelog  control  gbp.conf  pve-san-fenced.default  pve-san-fenced.docs  pve-san-fenced.examples  pve-san-fenced.service  rules
examples/: pve_san_fenced.pp
libmultipath/: Cargo.toml
libmultipath/src/: lib.rs
libmultipath/tests/: integration_test.rs
libpve-san/: Cargo.toml
libpve-san/src/: lib.rs  sysfs.rs
libpve-san/tests/: integration_test.rs
man/: mpath-mockd.8  mpath-query.1  pve-san-fenced.8  pve-san-query.1  pvesh-mock.1
src/: config.rs  lib.rs  main.rs  status.rs
test-data/multipathd/list_maps/: list_maps.txt
test-data/multipathd/show_config/: show_config.txt
test-data/multipathd/show_config_local/: bad.txt  bad2.txt  ok.txt  ok2.txt
test-data/multipathd/show_maps_json/: all_active_running.json  disabled_pg_active_path.json  failed_all_timeout.json  failed_ghost_only.json  mpatha_active_mpathb_failed.json  some_undef_some_active.json
test-data/multipathd/show_status/: show_status.txt
test-data/multipathd/show_topology/: show_topology.txt
test-data/pve/local/qemu-server/: 104.conf  105.conf  114.conf  116.conf  117.conf  122.conf  126.conf  130.conf  131.conf  132.conf  133.conf  140.conf  141.conf  144.conf  145.conf  147.conf  999.conf
test-data/pvesh/: lsblk.json
test-data/pvesh/get_nodes/: pve001_qemu.json
test-data/pvesh/get_nodes/config/: 104.json  105.json  114.json  116.json  117.json  122.json  126.json  130.json  131.json  132.json  133.json  140.json  141.json  144.json  145.json  147.json
test-data/sys/block/dm-0/dm/: name
test-data/sys/block/dm-1/dm/: name
test-data/sys/block/dm-10/dm/: name
test-data/sys/block/dm-11/dm/: name
test-data/sys/block/dm-12/dm/: name
test-data/sys/block/dm-13/dm/: name
test-data/sys/block/dm-14/dm/: name
test-data/sys/block/dm-15/dm/: name
test-data/sys/block/dm-16/dm/: name
test-data/sys/block/dm-17/dm/: name
test-data/sys/block/dm-18/dm/: name
test-data/sys/block/dm-19/dm/: name
test-data/sys/block/dm-2/dm/: name
test-data/sys/block/dm-20/dm/: name
test-data/sys/block/dm-21/dm/: name
tests/: daemon_tests.rs  integration_test.rs
tools/mpath-mockd/: Cargo.toml
tools/mpath-mockd/src/: main.rs
tools/mpath-mockd/tests/: daemon_test.rs
tools/mpath-query/: Cargo.toml
tools/mpath-query/src/: main.rs
tools/mpath-query/tests/: integration_test.rs
tools/pve-san-query/: Cargo.toml
tools/pve-san-query/src/: main.rs
tools/pve-san-query/tests/: integration_test.rs
tools/pvesh-mock/: Cargo.toml
tools/pvesh-mock/src/: main.rs
(+65 files in other folders)
