[workspace]
members = ["libmultipath", "libpve-san", "tools/mpath-query", "tools/mpath-mockd", "tools/pve-san-query"]
resolver = "2"

[workspace.dependencies]
libc = "0.2"
clap = { version = "4.0", features = ["derive"] }
lsblk = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt", "sync", "macros"] }
