[package]
name = "pve-san-fenced"
version = "0.1.0"
edition = "2021"

[dependencies]
libmultipath = { path = "libmultipath" }
libpve-san = { path = "libpve-san" }
tokio = { workspace = true, features = ["rt", "time", "macros", "fs", "process", "sync"] }
serde = { workspace = true }
serde_json = { workspace = true }
log = "0.4"
env_logger = "0.10"
clap = { workspace = true }
libc = { workspace = true }

[workspace]
members = ["libmultipath", "libpve-san", "tools/mpath-query", "tools/mpath-mockd", "tools/pve-san-query", "tools/pvesh-mock"]
resolver = "2"

[workspace.dependencies]
libc = "0.2"
clap = { version = "4.0", features = ["derive"] }
lsblk = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt", "sync", "macros", "process"] }
