[package]
name = "libpve-san"
version = "0.1.0"
edition = "2021"

[dependencies]
lsblk = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
log = "0.4"
tracing = { workspace = true }
