[package]
name = "libpve-san"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Bernd Zeimetz <bernd@bzed.de>"]


[dependencies]
lsblk = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
log = "0.4"
tracing = { workspace = true }
